[FIX] Improve contrast for event text in calendar week view for the darkroom theme
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@32851 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/darkroom.css
+++ b/styles/darkroom.css
@@ -1969,6 +1969,9 @@ a.viewmodeon img.icon {
 	display: inline;
 }
 
+.dtstart {
+	color: #D8D8D8;
+}
 /*****  Polls  *****/
 .pollresults {
 	margin-top: 5px;
